# presage

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  README  config.h.cmake  dirs.h.cmake
apps/: CMakeLists.txt
apps/dbus/: CMakeLists.txt  setup.py.in
apps/gtk/: CMakeLists.txt
apps/gtk/gpresagemate/: CMakeLists.txt  Makefile.am
apps/gtk/gprompter/: CMakeLists.txt  gprompter.c
apps/notepad++/: CMakeLists.txt
apps/notepad++/src/: PluginDefinition.cpp
apps/notepad++/vs.proj/: NppPresage.vcxproj
apps/python/: CMakeLists.txt  setup.py.in
apps/python/presagemate/: presagemate.py
apps/python/prompter/: prompter.py
apps/qt/qprompter/: mainwindow.cpp  qprompter.pro
bindings/: CMakeLists.txt
bindings/c/: CMakeLists.txt
bindings/csharp/: CMakeLists.txt  deploy.cmd
bindings/csharp/presage.net/: CMakeLists.txt
bindings/csharp/presage_csharp_demo/: CMakeLists.txt
bindings/csharp/presage_wcf_service/: CMakeLists.txt
bindings/csharp/presage_wcf_service_console_host/: CMakeLists.txt
bindings/csharp/presage_wcf_service_system_tray/: AboutForm.Designer.cs  AboutForm.cs  CMakeLists.txt
bindings/python/: CMakeLists.txt  setup.py.in
cmake/: AddHeadersAndSources.cmake  FindTinyXML.cmake
doc/: CMakeLists.txt  INSTALL_Cygwin_dev_env.txt  INSTALL_MSYS2_dev_env.txt  INSTALL_MinGW32_MSYS_dev_env.txt  INSTALL_MinGW64_MSYS_dev_env.txt  INSTALL_MinGW_MSYS_dev_env.txt
packaging/windows/: README  presage_installer.nsi  win-buildpackage.sh
resources/: CMakeLists.txt  presage.xpm
resources/arpa/: CMakeLists.txt
resources/profiles/: CMakeLists.txt  presage.xml.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  presage.cpp  presage.h  presageCallback.h  presageException.h
src/lib/core/: CMakeLists.txt  combiner.h  configuration.h  defaultProfile.cpp  dispatcher.h  logger.h  observable.h  observer.h  predictorActivator.h  profileManager.cpp  utility.cpp
src/lib/core/context_tracker/: CMakeLists.txt  contextTracker.h
src/lib/core/tokenizer/: CMakeLists.txt  forwardTokenizer.h  tokenizer.h
src/lib/predictors/: CMakeLists.txt
src/lib/predictors/dbconnector/: CMakeLists.txt  databaseConnector.cpp  databaseConnector.h  sqliteDatabaseConnector.h
src/lib/tinyxml/: CMakeLists.txt  tinyxml.h
src/tools/: CMakeLists.txt
src/tools/simulator/: CMakeLists.txt  simulator.h
test/: CMakeLists.txt
test/integration/: CMakeLists.txt
test/lib/: CMakeLists.txt
test/lib/common/: CMakeLists.txt
test/lib/core/: CMakeLists.txt  profileTest.cpp
test/lib/core/context_tracker/: CMakeLists.txt
test/lib/core/tokenizer/: CMakeLists.txt
test/lib/predictors/: CMakeLists.txt
test/lib/predictors/dbconnector/: CMakeLists.txt
test/tools/: CMakeLists.txt
website/hugo/: README.txt  config.toml
website/hugo/content/: _index.md
website/hugo/content/about/: _index.md  architecture.md  concepts.md  project_name_change.md
website/hugo/content/applications/: _index.md
website/hugo/content/contact/: _index.md
website/hugo/content/development/: _index.md
website/hugo/content/documentation/: _index.md
website/hugo/content/download/: _index.md
website/hugo/content/features/: _index.md
website/hugo/content/links/: _index.md
website/hugo/content/news/: 2.md  21.md  22.md  23.md  24.md  26.md  27.md  28.md  29.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  38.md  39.md  40.md  41.md  42.md  43.md  45.md  46.md  47.md  48.md  49.md  50.md  51.md  52.md  53.md  54.md  55.md  56.md  57.md  58.md  _index.md  presage-0.7.1.md  presage-0.7.2.md  presage-0.7.3.md  (+33 more)
website/hugo/layouts/: index.html
website/hugo/layouts/_default/: list.html
website/hugo/layouts/partials/: hero.html  site-footer.html  site-header.html  site-navigation.html
website/hugo/static/css/: presage.css
website/hugo/static/images/: presage-hero-image.xcf
